--- a/engine/examples/test/index.html
+++ b/engine/examples/test/index.html
@@ -3,7 +3,16 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title></title>
-        <script type="text/javascript" src="../../dist/spark-engine.js"></script>
+        <script type="text/javascript" src="dist/spark-engine.js"></script>
+        <style type="text/css">
+            html,
+            body
+            {
+                font-size: 0;
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
         <script type="text/javascript">
