--- a/slot-engine/games/sample-game/index.html
+++ b/slot-engine/games/sample-game/index.html
@@ -3,7 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title></title>
-        <script type="text/javascript" src="dist/spark-engine.js"></script>
+        <script type="text/javascript" src="../../dist/slot-engine.js"></script>
         <style type="text/css">
             html,
             body
@@ -16,7 +16,7 @@
     </head>
     <body>
         <script type="text/javascript">
-            RunGame(new SparkEngineApp());
+            RunGame(new SlotApp());
         </script>
     </body>
 </html>
