--- a/slot-engine/games/sample-game/index.html
+++ b/slot-engine/games/sample-game/index.html
@@ -8,6 +8,7 @@
             html,
             body
             {
+                background: black;
                 font-size: 0;
                 margin: 0;
                 padding: 0;
