--- a/slot-engine/games/sample-game/index.html
+++ b/slot-engine/games/sample-game/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title></title>
         <script type="text/javascript" src="../../dist/slot-engine.js"></script>
         <style type="text/css">
