Commented out debugging script.

--- a/slot-engine/games/sample-game/index.html
+++ b/slot-engine/games/sample-game/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title></title>
-        <script src="http://phlmac-0202.mfuse.net:8090/target/target-script-min.js#anonymous"></script>
+        <!--<script src="http://phlmac-0202.mfuse.net:8090/target/target-script-min.js#anonymous"></script>-->
         <script type="text/javascript" src="../../dist/slot-engine.js"></script>
         <style type="text/css">
             html,
